// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withEnzymeReactNative it should accept extra ignore message patterns and match snapshot 1`] = `
Object {
  "globals": Object {
    "__MOXY_JEST_CONFIG_ENZYME_ADAPTER__": "enzyme-adapter-react-16",
    "__MOXY_JEST_CONFIG_ENZYME_REACT_NATIVE_IGNORE_EXTRA_MESSAGE_PATTERNS__": Array [
      "foo",
      "bar",
    ],
    "foo": "bar",
  },
  "setupFilesAfterEnv": Array [
    "foo",
    "<PROJECT_ROOT>/packages/jest-config-enzyme/lib/setup.js",
    "<PROJECT_ROOT>/packages/jest-config-enzyme/lib/setup-react-native.js",
  ],
  "testEnvironment": "jsdom",
}
`;

exports[`withEnzymeReactNative should match snapshot 1`] = `
Object {
  "globals": Object {
    "__MOXY_JEST_CONFIG_ENZYME_ADAPTER__": "enzyme-adapter-react-16",
    "__MOXY_JEST_CONFIG_ENZYME_REACT_NATIVE_IGNORE_EXTRA_MESSAGE_PATTERNS__": Array [],
    "foo": "bar",
  },
  "setupFilesAfterEnv": Array [
    "foo",
    "<PROJECT_ROOT>/packages/jest-config-enzyme/lib/setup.js",
    "<PROJECT_ROOT>/packages/jest-config-enzyme/lib/setup-react-native.js",
  ],
  "testEnvironment": "jsdom",
}
`;

exports[`withEnzymeWeb should match snapshot 1`] = `
Object {
  "globals": Object {
    "__MOXY_JEST_CONFIG_ENZYME_ADAPTER__": "enzyme-adapter-react-16",
    "foo": "bar",
  },
  "setupFilesAfterEnv": Array [
    "foo",
    "<PROJECT_ROOT>/packages/jest-config-enzyme/lib/setup.js",
    "<PROJECT_ROOT>/packages/jest-config-enzyme/lib/setup-web.js",
  ],
  "testEnvironment": "jsdom",
}
`;
